...
        ],
      ),
      child: Column(
        children: [
          SearchBarWidget(
            controller: sourceController,
            hintText: 'Your Location',
            icon: Icons.location_on,
            iconColor: Theme.of(context).primaryColor,
          ),
          SearchBarWidget(
            controller: destinationController,
            hintText: 'Enter Destination',
            icon: Icons.location_on,
            iconColor: const Color(0xFFDA3A16),
          ),
        ],
      ),
    );
...
