...
class PreferencesPage extends StatelessWidget {
  const PreferencesPage({super.key});

  static const List<String> _transportationOptions = [
    'Driving',
    'Walking',
    'Biking',
    'Transit'
  ];

  static const Map<String, IconData> _transportationIcons = {
    'Driving': Icons.directions_car,
    'Walking': Icons.directions_walk,
...
    final dividerColor = Theme.of(context).dividerColor;
    
    return Consumer<PreferencesModel>(
      builder: (context, preferences, child) {
        return Scaffold(
          backgroundColor: backgroundColor,
          appBar: customAppBar(context, 'Preferences'),
          body: Semantics(
            label: 'Explore general preference options.',
            child: ListView(
              children: [
                ListTile(
                  title: Text('Transportation Method', 
...
