...
typedef LoadStringFunction = Future<String> Function(String);

class BuildingRepository {
  static const ConcordiaBuilding h = ConcordiaBuilding(
      45.49721130711485,
      -73.5787529114208,
      "Hall Building",
      "1455 boul. de Maisonneuve O",
      "Montreal",
      "QC",
      "H3G 1M8",
      "H",
      ConcordiaCampus.sgw);
...
      "FG",
      ConcordiaCampus.sgw);

  static const ConcordiaBuilding cl = ConcordiaBuilding(
      45.49423833241474,
      -73.57900293630135,
      "CL Building",
      "1665 rue Sainte-Catherine O",
      "Montreal",
      "QC",
      "H3H 1L9",
      "CL",
      ConcordiaCampus.sgw);
...
