...
  const ConcordiaCampus(super.lat, super.lng, super.name, super.streetAddress,
      super.city, super.province, super.postalCode, this.abbreviation);

  static const ConcordiaCampus sgw = ConcordiaCampus(
      45.49721130711485,
      -73.5787529114208,
      "Sir George Williams Campus",
      "1455 boul. de Maisonneuve O",
      "Montreal",
      "QC",
      "H3G 1M8",
      "SGW");

...
