appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "7%,9%"
- assertVisible: "Preferences"
- tapOn: "Preferences"
- tapOn:
    point: "90%,15%"
    retryTapIfNoChange: false
- tapOn: "Biking"
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "28%,54%"
- assertVisible: "Google Map"
- tapOn: "Your Location"
- tapOn: "Hall Building"
- tapOn: "Enter Destination"
- tapOn: "CL Building"
- assertVisible: "3 mins"
